vis/src/components/Cluster/BaseCluster.scss
.mono {
  font-family: 'Courier New', Courier, monospace;
}

.pre {
  font-weight: 600;
  line-height: 2;
  box-shadow: rgba(0, 0, 0, 0.04) 0px 3px 5px;
}

.cluster {
  display: grid;
  box-shadow: rgba(149, 157, 165, 0.2) 0px 8px 24px;
  padding: 2rem;
  border-radius: 8px;
  background-color: var(--clr-card-bg);
  gap: 2rem;
  grid-template:
    "title title"
    "properties files"
    "properties files"
  ;
  grid-template-columns: 1fr 2fr;
  position: relative;

  .tooltip {
    position: absolute;
    color: white;
    top: .5rem;
    left: .5rem;
    background-color: gray;
    font-size: 0.75rem;
    padding: .25rem .5rem;
    border-radius: 4px;
    opacity: 0;

    &.visible {
      opacity: 1;
    }
  }

  h3 {
    color: var(--clr-card-title-fg);
  }

  .title {
    grid-area: title;
    display: grid;
    flex-direction: row;
    column-gap: 1rem;
    grid-template:
      "icon title"
      "also also"
    ;
    place-content: start;
    place-items: start;
    /* color: rgb(63, 130, 63); */
    h2 {
      grid-area: title;
      display: flex;
      line-height: 2;
      align-self: center;
    }
  
    .candidate-type {
      grid-area: icon;
      font-size: 2rem;
      font-weight: 800;
      color: var(--clr-card-icon-fg);
    }
  
    .row {
      grid-area: also;
      display: flex;
      flex-direction: row;
      flex-wrap: wrap;
      align-items: center;

      .names {
        grid-area: names;
        max-height: 200px;
        overflow-y: scroll;
      }

      .name-freq {
        /* background-color: aliceblue; */
        background-color: var(--clr-card-badge-bg);
        color: var(--clr-card-badge-fg);
        font-weight: 800;
        padding: 4px 12px;
        margin: 4px 8px;
        border-radius: 6px;
        display: inline-block;
      }
    }
  }

  .properties {
    grid-area: properties;
    display: flex;
    flex-direction: column;
    gap: 0.5rem;

    .pre {
      /* background-color: #f0fafa; */
      /* background-image: linear-gradient(to left bottom, #f0fafa, #ecf9f9, #e9f7f7, #e5f6f6, #e1f4f4); */
      background-color: var(--clr-code-bg);
      color: var(--clr-code-fg);
      padding: 0.5rem 1rem;
    }

    .property.key {
      color: var(--clr-code-key)
    }
    
    .property.value {
      color: var(--clr-code-value);
    }
  }
  .files {
    grid-area: files;
    max-height: 400px;
    overflow-y: scroll;
    display: flex;
    flex-direction: column;
    gap: 0.5rem;

    pre {
      display: flex;
      flex-direction: column;
    }

    .file {
      cursor: pointer;

      &:hover {
        background-color: rgb(0, 0, 0, 0.1);
      }
    }
  }
}

